dataset1235/2025-2/805158916/users/644501727/executions/2118643220_494982382.log
== RUN (2025-09-01 14:39:35)
-- CODE: 
valortotal = float(input())
valorreal = valortotal + 15
valorreal = valortotal + 15 + (30/100)
print(round(valorreal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.3
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.3
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.3
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.3
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.3
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:37:22)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal + 30%
print(round(valorreal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:43:44)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
total = valorreal + (valorreal * 0.3)
print(round(valorreal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:155.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:37:20)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal + 30%
print(round(valorreal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:40:51)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:38:07)
-- CODE: 
valortotal = float(input())
valorreal = valortotal + 15
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:33:13)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:35:24)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valortotal * 0.3
print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:44:23)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
total = valorreal + (valorreal * 0.3)
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:344.5
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:179.4
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:1014.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:786.5
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:608.4
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:201.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:32:41)
-- CODE: 
valortotal = float(input())
valortotal = valortotal * 0.3
print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
75.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
36.9
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
229.5
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
177.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
135.9
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
42.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:43:55)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
total = valorreal + (valorreal * 0.3)
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:33:12)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:40:51)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
print(round(valorreal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:155.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:33:01)
-- CODE: 
valortotal = float(input())
valortotal = valortotal * 15
print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
3750.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
1845.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
11475.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
8850.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
6795.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
2100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:43:53)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
total = valorreal + (valorreal * 0.3)
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:36:25)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal * 0.3
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
79.5
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
41.4
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
234.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
181.5
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
140.4
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
46.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:37:21)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal + 30%
print(round(valorreal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
-- ERROR:
File "XXXX", line 3
    valorreal = valortotal + 30%
                                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:36:23)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal * 0.3
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
79.5
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
41.4
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
234.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
181.5
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
140.4
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
46.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:34:47)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
print(round(valortotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:26)
-- CODE: 
valortotal = float(input())
valorreal = valortotal + 15
valorreal = valortotal + 15 + (30/100)
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.3
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.3
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.3
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.3
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.3
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:43:55)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
total = valorreal + (valorreal * 0.3)
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:36:12)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal * 0.3
print(round(valorreal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
79.5
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
41.4
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
234.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
181.5
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
140.4
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
46.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:39:32)
-- CODE: 
valortotal = float(input())
valorreal = valortotal + 15
valorreal = valortotal + 15 + (30/100)
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.3
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.3
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.3
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.3
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.3
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:36:09)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal * 0.3
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
79.5
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
41.4
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
234.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
181.5
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
140.4
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
46.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:40:50)
-- CODE: 
valortotal = float(input("Digite o total da compra:"))
valorreal = valortotal + 15
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
Digite o total da compra:265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
Digite o total da compra:138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
Digite o total da compra:780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
Digite o total da compra:605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
Digite o total da compra:468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
Digite o total da compra:155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:38:06)
-- CODE: 
valortotal = float(input())
valorreal = valortotal + 15
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:34:43)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:33:00)
-- CODE: 
valortotal = float(input())
valortotal = valortotal * 15
print(round(valortotal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
3750.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
1845.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
11475.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
8850.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
6795.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
2100.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:36:25)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valorreal = valortotal * 0.3
print(round(valorreal,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
79.5
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
41.4
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
234.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
181.5
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
140.4
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
46.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:35:28)
-- CODE: 
valortotal = float(input())
valortotal = valortotal + 15
valortotal * 0.3
print(round(valortotal,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
250
---- correct output:
344.5
---- user output:
265.0
-- TEST CASE 2:
---- input:
123
---- correct output:
179.4
---- user output:
138.0
-- TEST CASE 3:
---- input:
765
---- correct output:
1014.0
---- user output:
780.0
-- TEST CASE 4:
---- input:
590
---- correct output:
786.5
---- user output:
605.0
-- TEST CASE 5:
---- input:
453
---- correct output:
608.4
---- user output:
468.0
-- TEST CASE 6:
---- input:
140
---- correct output:
201.5
---- user output:
155.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
